--- a/contrib/gitian-descriptors/gitian-win32.yml
+++ b/contrib/gitian-descriptors/gitian-win32.yml
@@ -12,7 +12,7 @@ packages:
 - "faketime"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/MojocoinV3/mojocoin/.git"
+- "url": "https://github.com/MOJOv3/mojocoin/.git"
   "dir": "mojocoin"
 files:
 - "qt-win32-4.7.4-gitian.zip"
