--- a/contrib/gitian-descriptors/gitian.yml
+++ b/contrib/gitian-descriptors/gitian.yml
@@ -20,7 +20,7 @@ packages:
 - "libpng12-dev"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/MojocoinV3/mojocoin/.git"
+- "url": "https://github.com/MOJOv3/mojocoin/.git"
   "dir": "mojocoin"
 files:
 - "miniupnpc-1.6.tar.gz"
